[package]
name = "currency-token"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/actor.rs"

[dependencies]
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
serde = "1.0.126"
ic-event-hub = "0.1.3"
ic-event-hub-macros = "0.1.3"
union-utils = "0.1.0"
antifragile-currency-token-client = { path = "../clients/rust" }