[package]
name = "antifragile-currency-token-client"
version = "0.1.3"
edition = "2018"
license = "MIT"
description = "Antifragile Currency token client code for Rust"

[dependencies]
ic-cdk = "0.3.1"
serde = "1.0.126"
strum = "0.21.0"
strum_macros = "0.21.1"
ic-event-hub-macros = "0.1.3"
ic-event-hub = "0.1.3"
ic-cron = "0.1.0"